-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b21
-
sparc
-
solaris
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8184736 | 9 | Shafi Ahmad | P4 | Closed | Won't Fix | |
| JDK-8190593 | 8u171 | Shafi Ahmad | P4 | Resolved | Fixed | b01 |
| JDK-8184737 | 8u162 | Shafi Ahmad | P4 | Resolved | Fixed | b01 |
| JDK-8198045 | emb-8u171 | Shafi Ahmad | P4 | Resolved | Fixed | b01 |
In the file src/os_cpu/solaris_sparc/vm/vm_version_solaris_sparc.cpp
if kstat_open() fails here:
414 // Otherwise use kstat to determine the machine type.
415 kstat_ctl_t* kc = kstat_open();
..we may then use an uninitialized char* in the later assert:
434 assert(impl_m != 0, "Unknown CPU implementation %s", impl);
if kstat_open() fails here:
414 // Otherwise use kstat to determine the machine type.
415 kstat_ctl_t* kc = kstat_open();
..we may then use an uninitialized char* in the later assert:
434 assert(impl_m != 0, "Unknown CPU implementation %s", impl);
- backported by
-
JDK-8184737 Possible uninitialized char* in vm_version_solaris_sparc.cpp
-
- Resolved
-
-
JDK-8190593 Possible uninitialized char* in vm_version_solaris_sparc.cpp
-
- Resolved
-
-
JDK-8198045 Possible uninitialized char* in vm_version_solaris_sparc.cpp
-
- Resolved
-
-
JDK-8184736 Possible uninitialized char* in vm_version_solaris_sparc.cpp
-
- Closed
-
- relates to
-
JDK-8165482 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-