8177958: Possible uninitialized char* in vm_version_solaris_sparc.cpp

Reviewed-by: shade, dholmes, kevinw